log
vi., 13 de may. de 2022 11:31:36: 
 tests:  0|5
total_score: 0/70
c4582cc
vi., 13 de may. de 2022 11:32:09: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|5
total_score: 0/70
94ca579
vi., 13 de may. de 2022 11:34:17: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
915103a
vi., 13 de may. de 2022 11:35:23: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
8254915
vi., 13 de may. de 2022 11:36:55: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
7c95aaf
vi., 13 de may. de 2022 11:37:37: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
9941c1a
vi., 13 de may. de 2022 11:50:41: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
test.c: In function 'is_valid':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
13d33d3
